--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="12dp"
+    android:background="@color/black"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:fontFamily="@font/aladin"
+        android:text="InstaLike"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:textSize="45dp" />
+
+    <EditText
+        android:id="@+id/lemail"
+        android:textColor="@color/black"
+        android:textColorHint="#9F666060"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/edit_text_backgraound"
+        android:layout_marginTop="15dp"
+        android:hint="Email Id"
+        android:padding="10dp"/>
+    <EditText
+        android:id="@+id/lpassword"
+        android:textColorHint="#9F666060"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:background="@drawable/edit_text_backgraound"
+        android:layout_marginTop="15dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:padding="10dp"/>
+    <Button
+        android:id="@+id/loginB"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:background="@drawable/button_background"
+        android:text="LogIn"
+        android:layout_marginTop="15sp"
+        android:padding="10dp"/>
+
+    <TextView
+        android:id="@+id/register_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New to Instalite ? Register"
+        android:textColor="@color/white"
+        android:layout_marginTop="15dp"
+        />
+</LinearLayout>
